# light_plugin_ign

./: CMakeLists.txt  README.md
include/light_plugin/: modify_light_plugin.hpp
src/: modify_light_plugin.cpp
worlds/: sphere_light_world.sdf
